force-app/main/default/objects/Case_Audit__c/Case_Audit__c.object-meta.xml
<CustomObject>
    <label>Case Audit</label>
    <pluralLabel>Case Audits</pluralLabel>
    <description>Case Audit</description>
    <nameField>
        <label>Case Audit Name</label>
        <type>AutoNumber</type>
        <displayFormat>CAU-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>