force-app/main/default/objects/Case_Audit__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Text</type>
    <length>80</length>
    <description>Action</description>
</CustomField>