force-app/main/default/objects/Case_Audit__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Audits</relationshipLabel>
    <relationshipName>Case_Audits</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case</description>
</CustomField>