force-app/main/default/objects/Case_Audit__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Detail</description>
</CustomField>